<resources>
    <string name="ok">确定</string>
    <string name="detail">详情</string>
    <string name="cancel">取消</string>
    <string name="app_name">龙管家</string>
    <string name="maintenance_cancel">取消报修</string>
    <string name="maintenance_confirm">确认完成</string>
    <string name="maintenance_order_submit">提交</string>


    <!--<string name="pull_to_refresh_pull_label">下拉刷新…</string>-->
    <!--<string name="pull_to_refresh_release_label">松开刷新…</string>-->
    <!--<string name="pull_to_refresh_refreshing_label">正在载入…</string>-->

    <!--<string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>-->
    <!--<string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>-->
    <!--<string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>-->


    <string name="select_images">相册</string>
    <string name="take_photo">相机</string>
    <string name="album_all">所有照片</string>
    <string name="action_submit">提交</string>
    <string name="action_submit_string">提交(%1$d/%2$d)</string>
    <string name="action_submit_string_no_max">提交(%1$d)</string>
    <string name="event">活动</string>
    <string name="vote">投票</string>
    <string name="neighborhood">邻里</string>
    <string name="error_title_empty">标题不能为空</string>
    <string name="error_desc_empty">描述不能为空</string>
    <string name="error_vote_options_empty">选项内容不能为空</string>
    <string name="check_mobile_is_not_null">手机号不能为空</string>
    <string name="check_please_input_11_number">请输入11位手机号</string>
    <string name="check_smscode_not_null">验证码不能为空</string>
    <string name="check_please_input_6_number">请输入6位验证码</string>
    <string name="check_housecode_not_null">房屋验证码不能为空</string>
    <string name="check_please_input_10_number">请输入10位房屋验证码</string>
    <string name="my_post">我的发布</string>
    <string name="secondhand">二手</string>
    <string name="my_message">我的私信</string>
    <string name="system_message">系统消息</string>
    <string name="my_comments">我的评论</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_event">我的活动</string>
    <string name="systemMsg_title">系统消息</string>

    <!-- dialog -->
    <string name="dialog_text_title">提示</string>
    <string name="dialog_text_immediately">立即</string>
    <string name="dialog_text_cancel">取消</string>
    <string name="dialog_text_confirm">确定</string>
    <string name="dialog_text_update">更新</string>

    <array name="maintenance_type">
        <item>供水报修</item>
        <item>供电报修</item>
        <item>燃气报修</item>
        <item>其它报修</item>
    </array>

</resources>
